# MisinfoTracker101

./: .env.example  .replit  CIVILIAN_EXPORT_GUIDE.md  DEPLOYMENT_README.md  Dockerfile  add_metadata_field.py  add_rss_sources.py  app.py  civilian_scripts.sh  config.py  deployment_guide.md  deployment_requirements.txt  docker-compose.yml  evaluate_detector.py  fix_auth.py  generate_training_content.py  init_open_sources.py  loudbuild.yaml  main.py  migrate_strategy_field.py  migrate_title_field.py  models.py  pyproject.toml  recreate_counter_message_table.py  recreate_db.py  replit_auth.py  test_route.py  vercel.json  vercel.requirements.txt  vercel_app.py  verify_models.py  wsgi.py
agents/: agent_factory.py  analyzer_agent.py  analyzer_agent_v2.py  base_agent.py  counter_agent.py  counter_agent_v2.py  detector_agent.py  detector_agent_v2.py  multi_agent_coordinator.py
api/: index.py
attached_assets/: Pasted--Summary-Below-are-concrete-Python-code-examples-for-integrating-four-advanced-streaming-cluste-1745872599487.txt  Pasted--python-from-flask-import-Flask-request-jsonify-import-pandas-as-pd-import-numpy-as-np-from--1745855981299.txt  Pasted--python-from-flask-import-Flask-request-jsonify-import-pandas-as-pd-import-numpy-as-np-from--1745856009587.txt  Pasted--python-import-datetime-import-json-import-logging-import-os-from-enum-import-Enum-from-typi-1745855651867.txt  Pasted--python-import-json-from-collections-import-defaultdict-from-datetime-import-datetime-from-typ-1745855720576.txt  Pasted--python-import-pandas-as-pd-import-numpy-as-np-from-flask-import-Flask-render-template-reques-1745855222786.txt  Pasted-Below-is-a-roadmap-and-code-examples-for-adding-Predictive-Modeling-capabilities-trajectory-fore-1745899012473.txt  Pasted-Counter-narrative-integration-transforms-passive-monitoring-into-an-active-defense-by-tailoring-inte-1745901129192.txt  Pasted-Excellent-your-clarification-is-extremely-precise-and-matches-exactly-the-rigor-needed-for-a-sover-1745604912218.txt  (+9 more)
config/: advanced_data_sources.json  fact_check_sources.json  open_data_sources.json  open_news_sources.json  (+1 more)
(+179 files in other folders)
