[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "spacy>=3.8.5",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "numpy>=2.2.5",
    "scikit-learn>=1.6.1",
    "faiss-cpu>=1.10.0",
    "networkx>=3.4.2",
    "es-core-news-sm",
    "trafilatura>=2.0.0",
    "openai>=1.76.0",
    "anthropic>=0.50.0",
    "tweepy>=4.15.0",
    "feedparser>=6.0.11",
    "telethon>=1.40.0",
    "flask-wtf>=1.2.2",
]

[tool.uv.sources]
es-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.8.0/es_core_news_sm-3.8.0-py3-none-any.whl" }
